// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Component with a passed model prop containing blocks should render correctly 1`] = `
Array [
  <header
    className="sc-bwzfXH iaenUL"
    role="banner"
>
    <a
        className="sc-bdVaJa iguvfJ"
        href="http://bbc.co.uk/news"
    >
        BBC News
    </a>
</header>,
  <div>
    <h1
        className="sc-htpNat kEwiJ"
    >
        headline
        : 
        {"type":"headline","blockId":"1"}
    </h1>
    <p>
        test
        : 
        {"type":"test","blockId":"2"}
    </p>
</div>,
]
`;

exports[`Article Component with no props should render correctly 1`] = `
Array [
  <header
    className="sc-bwzfXH iaenUL"
    role="banner"
>
    <a
        className="sc-bdVaJa iguvfJ"
        href="http://bbc.co.uk/news"
    >
        BBC News
    </a>
</header>,
  <div />,
]
`;
